force-app/main/default/objects/breadwinner_qbo__Payment__c/breadwinner_qbo__Payment__c.object-meta.xml
<CustomObject>
    <description>Payment Events from QuickBooks Online</description>
    <label>Payment</label>
    <nameField>
        <label>Payment Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>