force-app/main/default/objects/breadwinner_qbo__Payment__c/fields/breadwinner_qbo__Created_in_QBO_Date__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__Created_in_QBO_Date__c</fullName>
    <description>CreateTime of Payment in QuickBooks Online</description>
    <label>Created in QuickBooks Online Date</label>
    <type>DateTime</type>
</CustomField>