force-app/main/default/objects/breadwinner_qbo__Payment__c/fields/breadwinner_qbo__QBO_Org_ID__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_qbo__QBO_Org_ID__c</fullName>
    <label>QuickBooks Online Org ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>